# project1_Ageeva_Alina_M25-555

./: .gitignore  README.md  hw1  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
